--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>noteai</title>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+        <script src="{{url_for('static', filename='script.js')}}"></script>
     </head>
 
     <body>
@@ -13,17 +14,15 @@
         <div id="login-block">
             <form action="/login" method="post">
                 <label>Username:</label><input type="text" name="username"><br>
-                <label>Password:</label><input type="text" name="password"><br>
+                <label>Password:</label><input type="password" name="password" id="password"><br>
+                <input type="checkbox" onclick="togglePassword()"><p>Show Password</p>
                 <input type="submit" name="submit" value="Login">
                 <input type="reset" name="reset" value="Clear">
             </form>
-
             <p>Or</p>
             <a href="/signup">Sign Up</a>
             <br>
         </div>
-
-        <!-- <script src="index.js"></script> -->
     </body>
 
 </html>
