Added some additonal pages

--- a/templates/user.html
+++ b/templates/user.html
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-        <h1 style="color:white;">Output: {{message_value}}</h1>
+        <h1 style="color:white;">{{message_value}}!</h1>
+        <button onclick="location.href = '/new_note';">Create new note</button>
     </body>
 
 </html>
